src/app/products/car-owners.component.css
.products {
  padding: 2rem;
}

label, input {
  display: block;
}

label {
  margin-bottom: 1rem;
}

.loading {
  position: absolute;
  display: flex;
  justify-content: center;
  align-content: center;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.8);
}

th {
  font-size: 14px;
  font-weight: bold;
}

button {
  margin: 5px;
}

@media only screen and (max-width: 600px) {

  #plateTab {
    width: 100%;
  }
}

@media only screen and (min-width: 601px) {

  #plateTab {
    width: 75%;
  }
}

.centerText {
  text-align: center;
}

